# alkiserver

./: CMakeLists.txt  LICENSE  README.md
include/: boostLink.h  cmdLink.h  config.h  dataBase.h  dataType.h  debugTools.h  global.h  taskManager.h  threadPool.h  tic_toc.h  toolFun.h  zmqLink.h
include/senseVoice/: cxx-api.h  sense-voice-cxx-api.h
src/: alkiserver.cpp  boostLink.cpp  cmdLink.cpp  config.cpp  dataBase.cpp  dataType.cpp  debugTools.cpp  files.cpp  taskManager.cpp  toolFun.cpp  zmqLink.cpp
src/senseVoice/: sense-voice-cxx-api.cc
